--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
 </style>
 
 <!-- jQuery -->
-<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-<link href="http://cdn.bootcss.com/bootswatch/3.1.1-1/css/spacelab/bootstrap.min.css" rel="stylesheet">
-<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-<script src="hc_maps.js"></script>
+<script src="js/jquery-1.11.0.min.js"></script>
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<script src="js/bootstrap.min.js"></script>
+<script src="js/hc_maps.js"></script>
 
 <!-- bring in leaflet -->
-<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
-<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-<link rel="stylesheet" href="https://www.hypercities.com/maplibrary/slider.css" />
+<script src="js/leaflet.js"></script>
+<link rel="stylesheet" href="css/leaflet.css" />
+<link rel="stylesheet" href="css/slider.css" />
 
 
 <script type="text/javascript">
