modal button css changes

--- a/index.html
+++ b/index.html
@@ -66,22 +66,25 @@
     <div id="welcome-modal" class="modal-overlay">
         <div class="modal-content">
             <span id="modal-close-button" class="modal-close">&times;</span>
-            <h1>Welcome to HyperCities Map Library</h1>
-			<p class="tagline">HyperCities: beyond physical cities, an abundant landscape of media, histories, and participatory possibilities.</p>
+            <h1>HyperCities</h1>
+			<p class="tagline">A HyperCity is a real city overlaid with thick information networks that not only catalyze the present but also go back in time to document the past and go forward to project future possibilities. HyperCities are always under construction.</p>
             <div class="modal-body-columns">
 				<div class="modal-column-left">
 					<img src="hypercities480.gif" alt="HyperCities Animation" style="vertical-align: top;">
+					
+					<button id="begin-your-journey">Begin Your Journey</button>
 				</div>
                 <div class="modal-column-right">
 					<h3>Explore the Map Library:</h3>
                     <ul>
-						<li><strong>Search and Discover:</strong> Use the side panel (☰) to find maps by title and start exploring.</li>
+						<li><strong>Search and Discover:</strong> Use the side panel (☰) to filter maps by title.</li>
 						<li><strong>Explore Historical Maps:</strong> Click a map card, a point on the timeline, or a boundary on the map.</li>
-
-						<li><strong>Navigate the Timeline:</strong> The timeline displays maps across different years. Click circles to jump to specific times. Zoom and pan for detailed exploration.</li>
+						<li><strong>Navigate Time:</strong> The timeline displays maps across different years. Click circles to jump to specific times. Zoom and pan for detailed exploration.</li>
 						<li><strong>Customize Your View:</strong> Toggle map boundaries to compare past and present, and adjust map opacity to blend different eras.</li>
 
                     </ul>
+					<h3>About HyperCities:</h3>
+					<p>HyperCities is based on the book <a href="https://escholarship.org/uc/item/3mh5t455" target="_blank">HyperCities: Thick Mapping in the Digital Humanities</a> by Todd Presner, David Shepard, and Yoh Kawano (Harvard University Press, 2014).</p>
                 </div>
             </div>
         </div>
